src/test/deca/context/invalid/declClass-sameFieldClassMethodSuper.deca
class Animal {
    int taille;

    void nombreDeQueues() {
    }
}

class Pangolin extends Animal {
    int nombreDeQueues;
}